syntax = "proto3";


package auth;


service AuthUsers {
    rpc validateUser(ValidateUserDto ) returns (User);
    rpc validateToken(ValidateTokenDto) returns (User) ;

    // user settings
    rpc getUserSetting(GetUserSettingsDTO) returns (Settings);
}
message Settings{
  string id =1;
  User user =2;
  int32 max_distance=3;
  int32 new_snap_distance=4;
  int32 snapDisappearTime=5;

}
message GetUserSettingsDTO {
  string id=1;
}

message User{
  string _id = 1;
  string password = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string bio = 6;
  bool isActive = 7;
  string role = 8;
  string image = 9;

}

message ValidateUserDto{
    string email= 1;
    string password = 2;
}


message ValidateTokenDto{
  string token=1;
}